# library_management_api

./: .env  .env.sample  README.md  compose.yml  forder_structure.md  pyproject.toml  run.sh
book-service/: Dockerfile  requirements.txt
book-service/app/: main.py
book-service/app/api/: book_routes.py
book-service/app/db/: db.py
book-service/app/models/: book_schemas.py
book-service/app/services/: books.py
loan-service/: Dockerfile
loan-service/app/: main.py
loan-service/app/api/: loan_routes.py
loan-service/app/db/: db.py
loan-service/app/models/: loan_extension_models.py  loan_models.py  loan_schemas.py
loan-service/app/services/: loan.py
loan-service/app/utils/: book.py  user.py
nginx/: Dockerfile  library  nginx.conf
src/librarymanagement/: main.py
src/librarymanagement/controllers/: book_controllers.py  loan_controllers.py  stat_controllers.py  user_controllers.py
src/librarymanagement/db/: connectDB.py
src/librarymanagement/models/: book_models.py  loan_models.py  loan_schemas.py  overview_schemas.py  stat_schemas.py
src/librarymanagement/routes/: book_routes.py  loan_routes.py  stat_routes.py  user_routes.py
stat-service/: Dockerfile  requirements.txt  run.sh
stat-service/app/: main.py
stat-service/app/api/: stat_routes.py
stat-service/app/services/: stat.py
stat-service/app/utils/: book.py  loan.py  user.py
user-service/: Dockerfile  requirements.txt  run.sh
user-service/app/: main.py
user-service/app/api/: user_routes.py
user-service/app/db/: db.py
user-service/app/models/: user_models.py  user_schemas.py
(+1 files in other folders)
