[project]
name = "librarymanagement"
version = "0.1.0"
description = ""
authors = [
    {name = "Zahin Abdullah Rakin",email = "zahinabdullahrakin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "beanie (>=1.29.0,<2.0.0)",
    "motor (>=3.7.0,<4.0.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "datetime (>=5.5,<6.0)",
    "pymongo (>=4.12.1,<5.0.0)",
]

[tool.poetry]
packages = [{include = "librarymanagement", from = "src"}]

[tool.poetry.scripts]
dev = "librarymanagement.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
